objects/TRWaySales__Global_Sales_Stages_Configuration__c.object
<CustomObject>
    <description>This table will be used to contain the text for the coaching message that is to be displayed with the corresponding opportunity stage name.</description>
    <fields>
        <fullName>TRWaySales__Customer_Actions__c</fullName>
        <label>Customer Actions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TRWaySales__Exit_Criteria__c</fullName>
        <label>Exit Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWaySales__Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWaySales__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Português (Brasil)</fullName>
                </value>
                <value>
                    <fullName>Español (México)</fullName>
                </value>
                <value>
                    <fullName>Español</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRWaySales__Sales_Rep_Actions__c</fullName>
        <label>Sales Rep Actions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TRWaySales__StageNameTranslated__c</fullName>
        <label>StageNameTranslated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWaySales__Stage_Name__c</fullName>
        <label>Stage Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualifying</fullName>
                </value>
                <value>
                    <fullName>Appointment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Solution Recommended</fullName>
                </value>
                <value>
                    <fullName>Generate Contract</fullName>
                </value>
                <value>
                    <fullName>Negotiate Contract</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Order Complete</fullName>
                </value>
                <value>
                    <fullName>Trial/Demo/ Solution Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Global Sales Stages Configuration</label>
    <listViews>
        <fullName>TRWaySales__All</fullName>
        <columns>NAME</columns>
        <columns>TRWaySales__Stage_Name__c</columns>
        <columns>TRWaySales__Customer_Actions__c</columns>
        <columns>TRWaySales__Sales_Rep_Actions__c</columns>
        <columns>TRWaySales__Exit_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sequence Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Sales Stages Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TRWaySales__Uniqueness_for_sequence_number</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED( Name ) , Name = VLOOKUP( $ObjectType.TRWaySales__Global_Sales_Stages_Configuration__c.Fields.Name, $ObjectType.TRWaySales__Global_Sales_Stages_Configuration__c.Fields.Name, Name),  IF(ISNEW(), Name = VLOOKUP( $ObjectType.TRWaySales__Global_Sales_Stages_Configuration__c.Fields.Name, $ObjectType.TRWaySales__Global_Sales_Stages_Configuration__c.Fields.Name, Name), null))</errorConditionFormula>
        <errorMessage>Please enter Unique Sequence Number</errorMessage>
    </validationRules>
</CustomObject>